# DailyTask

./: .gitignore  LICENSE  README.md  REVIEW.md  settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: QuestionAndAnswer.json
app/src/main/cpp/: CMakeLists.txt  daily_task.cpp  watermark.cpp  watermark.hpp
app/src/main/java/com/pengxh/daily/app/: DailyTaskApplication.kt
app/src/main/java/com/pengxh/daily/app/adapter/: DailyTaskAdapter.kt
app/src/main/java/com/pengxh/daily/app/dao/: NotificationBeanDao.java
app/src/main/java/com/pengxh/daily/app/event/: ApplicationEvent.kt  FloatViewTimerEvent.kt  HideFloatingWindowEvent.kt  UpdateDingDingTimeoutEvent.kt  UpdateFloatingWindowTimeEvent.kt  UpdateTaskResetTimeEvent.kt
app/src/main/res/drawable/: ic_arrow_right.xml  ic_ding_ding.xml  ic_fei_shu.xml  ic_menu_add.xml  ic_menu_settings.xml  ic_title_left.xml  ic_title_right_black.xml  ic_wei_xin.xml
app/src/main/res/layout/: activity_command.xml  activity_email_config.xml  activity_main.xml  activity_message_channel.xml  activity_notice.xml  activity_question_and_answer.xml  activity_settings.xml  activity_task_config.xml  activity_wx_config.xml  fragment_daily_task.xml  fragment_settings.xml  item_app_rv_l.xml  item_command_rv_l.xml  item_q_a_rv_l.xml  window_floating.xml
app/src/main/res/menu/: email_config_top_bar_menu.xml  main_top_bar_menu.xml  notice_history_top_bar_menu.xml
app/src/main/res/values/: colors.xml  styles.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
lite/: build.gradle
(+84 files in other folders)
